# tartarus

./: .gitignore  AGENTS.md  README.md  agent.nix  flake.nix  main.py  package.nix  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml
agent-modules/: default.nix
lib/: agents.nix
tartarus/: __init__.py  agent_loop.py  audit.py  background.py  broker.py  bundle.py  cli.py  config.py  constants.py  context.py  jail.py  manifest.py  manifest_loader.py  models.py  network_proxy.py  policy.py  process.py  session.py  shell.py
tartarus/provider/: __init__.py  base.py  openai_compat.py
templates/default/: agent.nix  flake.nix
tests/: helpers.py  manifest_fixtures.py  test_agent_loop.py  test_audit.py  test_background.py  test_broker.py  test_bundle.py  test_cli.py  test_config.py  test_context.py  test_jail.py  test_manifest.py  test_manifest_loader.py  test_network_proxy.py  test_policy.py  test_process.py  test_provider.py  test_session.py  test_shell.py
